--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   application:
     container_name: spotifyfav
-    image: openjdk:8-jdk-slim
+    build: .
     ports:
     - "8080:8080"
     volumes: 
