--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,9 +3,7 @@ version: "3.5"
 services:
   application:
     container_name: spotifyfav
-    build: .
+    build: ./app
     ports:
     - "8080:8080"
-    volumes: 
-    - ./app:/app
     command: java -jar /app/App.jar
